[Refactor] Sync Job Service 내 LocalDate 로 타임 포맷 변경, 그로 인한 대대적인 변경

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,30 +1,22 @@
-# °øÅë ¿¡·¯ ¸Ş½ÃÁö
-error.message.not-found="¿äÃ»ÇÏ½Å ¸®¼Ò½º¸¦ Ã£À» ¼ö ¾ø½À´Ï´Ù."
-error.message.badRequest="Àß¸øµÈ ¿äÃ»ÀÔ´Ï´Ù."
-error.message.already-exists="ÀÌ¹Ì Á¸ÀçÇÏ´Â ¸®¼Ò½ºÀÔ´Ï´Ù."
-error.message.internal="¼­¹ö ³»ºÎ ¿À·ù°¡ ¹ß»ıÇÏ¿´½À´Ï´Ù."
-
-# °øÅë µğÅ×ÀÏ
-error.details.internal ="¿¹±âÄ¡ ¸øÇÑ ¼­¹ö ³»ºÎ ¿À·ù°¡ ¹ß»ıÇÏ¿´½À´Ï´Ù."
-
-error.details.indexInfo.not-found="ÇØ´ç Áö¼ö Á¤º¸¸¦ Ã£À» ¼ö ¾ø½À´Ï´Ù."
-error.details.indexInfo.badRequest= "Áö¼ö Á¤º¸ ¿äÃ» ÆÄ¶ó¹ÌÅÍ°¡ ¿Ã¹Ù¸£Áö ¾Ê½À´Ï´Ù."
-error.details.indexInfo.already-exists="µ¿ÀÏÇÑ Áö¼ö Á¤º¸°¡ ÀÌ¹Ì µî·ÏµÇ¾î ÀÖ½À´Ï´Ù."
-
-error.details.indexData.not-found="ÇØ´ç Áö¼ö µ¥ÀÌÅÍ¸¦ Ã£À» ¼ö ¾ø½À´Ï´Ù."
-error.details.indexData.badRequest="Áö¼ö µ¥ÀÌÅÍ ¿äÃ» ÆÄ¶ó¹ÌÅÍ°¡ ¿Ã¹Ù¸£Áö ¾Ê½À´Ï´Ù."
-error.details.indexData.already-exists="µ¿ÀÏÇÑ Áö¼ö µ¥ÀÌÅÍ°¡ ÀÌ¹Ì Á¸ÀçÇÕ´Ï´Ù."
-
-error.details.syncJobHistory.not-found="µ¿±âÈ­ ÀÌ·Â(Sync Job History)À» Ã£À» ¼ö ¾ø½À´Ï´Ù."
-error.details.syncJobHistory.badRequest="µ¿±âÈ­ ÀÌ·Â ¿äÃ» ÆÄ¶ó¹ÌÅÍ°¡ ¿Ã¹Ù¸£Áö ¾Ê½À´Ï´Ù."
-error.details.syncJobHistory.already-exists="µ¿ÀÏÇÑ µ¿±âÈ­ ÀÌ·ÂÀÌ ÀÌ¹Ì Á¸ÀçÇÕ´Ï´Ù."
-
-error.details.autoSyncConfig.not-found= "ÀÚµ¿ ¿¬µ¿ ¼³Á¤À» Ã£À» ¼ö ¾ø½À´Ï´Ù."
-error.details.autoSyncConfig.badRequest="ÀÚµ¿ ¿¬µ¿ ¼³Á¤ ¿äÃ» ÆÄ¶ó¹ÌÅÍ°¡ ¿Ã¹Ù¸£Áö ¾Ê½À´Ï´Ù."
-error.details.autoSyncConfig.already-exists="ÇØ´ç ÀÚµ¿ ¿¬µ¿ ¼³Á¤ÀÌ ÀÌ¹Ì Á¸ÀçÇÕ´Ï´Ù."
-
-error.details.external-api.badRequest = "¿ÜºÎ API ¿äÃ» ÆÄ¶ó¹ÌÅÍ ¶Ç´Â ÀÎÁõ ¿À·ù°¡ ¹ß»ıÇÏ¿´½À´Ï´Ù."
-error.details.external-api.GateTimeOut = "¿ÜºÎ API ¿äÃ» ½Ã°£ÀÌ ÃÊ°úÇÏ¿´½À´Ï´Ù."
-error.details.external-api.BadGateWay = "¿ÜºÎ API ¼­¹ö ¿À·ù°¡ ¹ß»ıÇß½À´Ï´Ù."
-error.details.external-api.internal = "¿ÜºÎ API Ã³¸® Áß ¾Ë ¼ö ¾ø´Â ¿À·ù ¹ß»ıÇÏ¿´½À´Ï´Ù."
+error.message.not-found="Not Found"
+error.message.badRequest="Bad Request"
+error.message.already-exists="Already Exists"
+error.message.internal="Internal Server Error"
+error.details.internal="ì„œë²„ ë‚´ë¶€ ì˜¤ë¥˜ ë°œìƒ"
+error.details.indexInfo.not-found="ì§€ìˆ˜ ì •ë³´ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤."
+error.details.indexInfo.badRequest="[ì§€ìˆ˜ ì •ë³´] ì˜ëª»ëœ ì¸ìˆ˜ë¥¼ ì…ë ¥ë°›ì•˜ìŠµë‹ˆë‹¤."
+error.details.indexInfo.already-exists="í•´ë‹¹ ì§€ìˆ˜ ì •ë³´ê°€ ì´ë¯¸ ì¡´ì¬í•©ë‹ˆë‹¤."
+error.details.indexData.not-found="ì§€ìˆ˜ ë°ì´í„°ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤."
+error.details.indexData.badRequest="[ì§€ìˆ˜ ë°ì´í„°] ì˜ëª»ëœ ì¸ìˆ˜ë¥¼ ì…ë ¥ë°›ì•˜ìŠµë‹ˆë‹¤."
+error.details.indexData.already-exists="í•´ë‹¹ ì§€ìˆ˜ ë°ì´í„°ê°€ ì´ë¯¸ ì¡´ì¬í•©ë‹ˆë‹¤."
+error.details.syncJobHistory.not-found="ì—°ë™ ê¸°ë¡ì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤."
+error.details.syncJobHistory.badRequest="[ì—°ë™ ê¸°ë¡] ì˜ëª»ëœ ì¸ìˆ˜ë¥¼ ì…ë ¥ë°›ì•˜ìŠµë‹ˆë‹¤."
+error.details.syncJobHistory.already-exists="í•´ë‹¹ ì—°ë™ ê¸°ë¡ì´ ì´ë¯¸ ì¡´ì¬í•©ë‹ˆë‹¤."
+error.details.autoSyncConfig.not-found="ìë™ ì—°ë™ ì„¤ì •ì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤."
+error.details.autoSyncConfig.badRequest="[ìë™ ì—°ë™ ì„¤ì •] ì˜ëª»ëœ ì¸ìˆ˜ë¥¼ ì…ë ¥ë°›ì•˜ìŠµë‹ˆë‹¤."
+error.details.autoSyncConfig.already-exists="í•´ë‹¹ ìë™ ì—°ë™ ì„¤ì •ì´ ì´ë¯¸ ì¡´ì¬í•©ë‹ˆë‹¤."
+error.details.external-api.badRequest="[API] ì˜ëª»ëœ ì¸ìˆ˜ë¥¼ ì…ë ¥ë°›ì•˜ìŠµë‹ˆë‹¤."
+error.details.external-api.GateTimeOut="[API] ì‹œê°„ ì´ˆê³¼"
+error.details.external-api.BadGateWay="[API] API ì„œë²„ ì‘ë‹µ ì˜¤ë¥˜"
+error.details.external-api.internal="[API] API ì„œë²„ ë‚´ ì˜¤ë¥˜ ë°œìƒ"
 
